# python-project-starter-template

./: .env.template  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .yamllint.yaml  404.html  CHANGELOG.md  LICENSE  README.md  bandit.yaml  copier.yaml  generate.html  index.html  license.html  mkdocs.yaml  mypy.ini  prerequisites.html  pyproject.toml  pytest.ini  ruff.toml  sitemap.xml
.github/workflows/: ci.yml  release.yaml  test.yml
docs/: generate.md  index.md  prerequisites.md
extensions/: date.py  git.py  slugify.py
project/: .gitignore  .pre-commit-config.yaml  README.md.jinja2  bandit.yaml  mkdocs.yaml.jinja2  mypy.ini  pyproject.toml.jinja2  taplo.toml
project/.github/workflows/: codeql.yml  gh-pages-deploy.yml
project/schemas/: yamllint.json
project/src/{{ python_package_import_name }}/: example.py.jinja2  logger.py
project/tests/: test_example.py.jinja2
schemas/: pre-commit-config.json
search/: search_index.js  search_index.json
src/python_project_starter_template/: __about__.py  example.py
tests/: test_template.py
